# quest-ue4-modloader

./: .gitignore  Pinball FX New Dump  _github_modmenu_v4.lua  analyze_usmap.py  bridge_dump.py  find_guobjectarray.py  live_dump.py  modloader_sdk.lua  quick_bridge.py  quick_status.py  scan_strings.py  verify_pfx_guobjectarray.py
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/: LUA_API_COMPLETE_REFERENCE.md  PFX_TABLE_LOCK_DLC_ANALYSIS.md  YUP_ENGINE_FULL_API.md  YUP_REVERSAL_PROGRESS.md
installer/: Cargo.toml  build.bat
installer/src/: adb.rs  cli.rs  game_db.rs  gui.rs  main.rs  pipeline.rs  signer.rs  smali.rs  tools_setup.rs
modloader/: CMakeLists.txt  build.bat
modloader/include/modloader/: adb_bridge.h  aes_extractor.h  auto_offsets.h  crash_handler.h  game_profile.h  lua_cast.h  lua_console.h  lua_engine.h  lua_tarray.h  lua_uobject.h  lua_yup.h  pattern_scanner.h  pe_trace.h  process_event_hook.h  reflection_walker.h  safe_call.h  symbols.h  types.h  ue_console.h  ue_types.h
modloader/src/: main.cpp
modloader/src/bridge/: adb_bridge.cpp
modloader/src/core/: auto_offsets.cpp  config.cpp  game_profile.cpp  init.cpp  paths.cpp  pattern_scanner.cpp  symbols.cpp
modloader/src/hook/: pe_trace.cpp  process_event_hook.cpp
modloader/src/lua/: lua_bindings.cpp  lua_cast.cpp  lua_console.cpp  lua_delayed_actions.cpp  lua_engine.cpp  lua_enum_ext.cpp  lua_tarray.cpp  lua_types.cpp  lua_ue4ss_globals.cpp  lua_ue4ss_types.cpp  lua_uobject.cpp  lua_ustruct.cpp  lua_yup.cpp
modloader/src/mods/: mod_loader.cpp
modloader/src/pak/: aes_extractor.cpp  pak_mounter.cpp
modloader/src/reflection/: class_rebuilder.cpp  lua_dump_generator.cpp  reflection_walker.cpp
modloader/src/util/: crash_handler.cpp  logger.cpp  safe_call.cpp
mods/handboi/ControllerFly/: main.lua
mods/handboi/InstantKill/: main.lua
mods/handboi/UnlimitedWingFlaps/: main.lua
mods/pfx/PFX_Cheats/: main.lua
mods/pfx/PFX_CollectionRandomizer/: main.lua
mods/pfx/PFX_FingerMode/: main.lua
mods/pfx/PFX_MaxAll/: main.lua
mods/pfx/PFX_ModMenu/: main.lua
mods/pfx/PFX_NativeCheats/: main.lua
mods/pfx/PFX_Preservation/: main.lua
mods/re4/3DCutscenesFix/: main.lua
mods/re4/AshleyArmor/: main.lua
mods/re4/BossFixes/: main.lua
mods/re4/DebugMenuAPI/: main.lua
mods/re4/DebugViewmodes/: main.lua
mods/re4/DualWield/: main.lua
mods/re4/EnemySpawner/: main.lua
mods/re4/GodMode/: main.lua
mods/re4/HeadBlocker/: main.lua
mods/re4/NoInventoryCollision/: main.lua
mods/re4/NoRecharge/: main.lua
mods/re4/NoRecoil/: main.lua
mods/re4/NoVignette/: main.lua
mods/re4/Patches/: main.lua
mods/re4/RadioSkip/: main.lua
mods/re4/Randomizer/: main.lua
mods/re4/Rapidfire/: main.lua
mods/re4/SaddlerAdaFix/: main.lua
mods/re4/StackableItems/: main.lua
mods/re4/TyrantAI/: main.lua
mods/re4/UnlimitedAmmo/: main.lua
tools/: deploy.py  deploy_so.sh
tools/bindump/: Cargo.toml
tools/bindump/src/: main.rs
