[package]
name = "ue-modloader-installer"
version = "1.0.0"
edition = "2021"
authors = ["xAstroBoy"]
description = "UE Modloader Installer — Inject modloader into Quest APKs (GUI + CLI)"

[dependencies]
eframe = "0.29"
egui = "0.29"
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
which = "7"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
anyhow = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
