[package]
name = "bindump"
version = "1.0.0"
edition = "2021"
description = "Blazing-fast binary dump search engine — IDA + Binary Ninja"

[[bin]]
name = "bindump"
path = "src/main.rs"

[dependencies]
memmap2 = "0.9"
regex = "1"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
aho-corasick = "1"
crossbeam-channel = "0.5"
indicatif = "0.17"
once_cell = "1"
byteorder = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
